// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonRow generates a button 1`] = `
<div
  className="button-row button-row--multiple button-row--count-1"
>
  <Button
    action={[Function]}
    key="My button"
    type="submit"
  >
    My button
  </Button>
</div>
`;

exports[`ButtonRow sets a class when generating multiple buttons 1`] = `
<div
  className="button-row button-row--multiple button-row--count-2"
>
  <Button
    action={[Function]}
    key="My button"
    type="submit"
  >
    My button
  </Button>
  <Button
    action={[Function]}
    key="Another button"
    type="submit"
  >
    Another button
  </Button>
</div>
`;
